fixed card item names and added more spacing between cards on mobile

--- a/src/components/ShopItem/style.shopitem.css
+++ b/src/components/ShopItem/style.shopitem.css
@@ -84,6 +84,7 @@
 		max-width: 90%;
 		padding: 30px 0;
 		align-items: center;
+		margin-bottom: 40px;
 	}
 
 	.shop-spacer {
