--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@ body::before {
 }
 
 .content {
-	height: 150vh;
+	height: 160vh;
 	padding: 20px;
 	/* font-size: 24px; */
 	color: white;
